--- a/src/index.css
+++ b/src/index.css
@@ -1,95 +1,95 @@
 body {
-    background-color: #f9f7fe;
-    font-family: "Roboto", sans-serif;
+  background-color: #f9f7fe;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
-    color: #885df1;
+  color: #885df1;
 }
 
 .weather-app {
-    background: white;
-    max-width: 600px;
-    margin: 45px auto;
-    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-    border-radius: 16px;
-    padding: 30px;
+  background: white;
+  max-width: 600px;
+  margin: 45px auto;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 16px;
+  padding: 30px;
 }
 
 header {
-    border-bottom: 1px solid #f9f7fe;
-    padding: 0 0 30px 0;
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
 }
 
 .search-form-input {
-    background-color: #f9f7fe;
-    border: none;
-    border-radius: 6px;
-    width: 80%;
-    font-size: 16px;
-    padding: 15px 20px;
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
 }
 
 .search-form-button {
-    background: #885df1;
-    padding: 15px 30px;
-    border: none;
-    font-size: 16px;
-    margin-left: 5px;
-    border-radius: 6px;
-    color: white;
+  background: #885df1;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
 }
 
 main {
-    padding: 30px 0;
+  padding: 30px 0;
 }
 
 .weather-app-data {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .weather-app-city {
-    margin: 0;
-    font-size: 38px;
-    line-height: 48px;
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
 }
 
 .weather-app-details {
-    font-size : 16px;
-    color: rgba(39, 33, 66, 0.4);
-    line-height: 24px;
-    font-weight: 500;
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
+  font-weight: 500;
 }
 
 .weather-app-details strong {
-    color: #f65282;
+  color: #f65282;
 }
 
 .weather-app-temperature-container {
-    display: flex;
+  display: flex;
 }
 
 .weather-app-icon {
-    font-size: 44px;
-    margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-app-temperature {
-    font-size: 88px;
-    margin-left: 10px;
-    font-weight: bold;
+  font-size: 88px;
+  line-height: 88px;
+  font-weight: bold;
 }
 
-.weather-app-unit {
-    margin-top: 16px;
-    font-size : 28px;
+.weatehr-app-unit {
+  margin-top: 6px;
+  font-size: 28px;
 }
 
 footer {
-    border-top: 1px solid #f9f7f9;
-    padding: 30px 0 0 0;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0);
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
 }
